# synapsecode

./: .env.example  .env.minimal  .gitignore  CLAUDE.md  DOCKER_PRODUCTION_DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.minimal  Dockerfile.simple  GITHUB_DEPLOYMENT.md  MINIMAL_DEPLOYMENT.md  PROJECT_ANALYSIS_REPORT.md  PROJECT_STATUS.md  README.md  SYNTAX_CHECK_REPORT.md  TROUBLESHOOTING.md  UBUNTU_DEPLOYMENT.md  UBUNTU_DOCKER_DEPLOYMENT_MINIMAL.md  UBUNTU_SERVER_DEPLOYMENT.md  __init__.py  deploy-minimal.sh  deploy-simple.sh  deploy.sh  diagnose.sh  docker-cleanup.sh  docker-compose.minimal.yml  docker-compose.override.yml  docker-compose.yml  docker-fix.sh  fix-deployment.sh  fix-docker-deployment.sh  maintain-minimal.sh  pre-deploy-check.sh  project_status.md  pyproject.toml  redeploy-complete.sh  redeploy-matrix.sh  requirements.txt  server.py  setup-domain.sh  (+7 more)
.trae/: TODO.md
.trae/documents/: Ubuntu_Matrix_Synapse_部署指南.md  产品需求文档.md  技术架构文档.md
api/: __init__.py  auth.py  device.py  federation.py  media.py  message.py  room.py  room_versions.py
config/: cache.py  cas.py  database.py  friends.py  homeserver-minimal.yaml  homeserver.py  password_policy.py  registration.py  server_notices.py
docker/nginx/: well-known.conf
docker/postgres/: postgresql.conf
docker/prometheus/: prometheus.yml
docs/: friends_configuration.md
handlers/: auth.py  device.py  federation.py  friends.py  media.py  message.py  room.py
rest/: __init__.py
rest/client/: friends.py
rest/media/: __init__.py
rest/media/v1/: __init__.py  _base.py  media_storage.py
storage/: __init__.py
storage/databases/main/: __init__.py  friends.py
storage/engines/: __init__.py  _base.py
storage/schema/: __init__.py
storage/schema/main/delta/84/: 01_friends_tables.sql
test_deploy/: deploy-simple.sh  docker-compose.simple.yml  test_config_generation.sh  test_federation_wellknown.py  test_handlers_validation.py  test_message_media.py  test_user_auth_room.py
test_deploy/well-known/.well-known/matrix/: client  server
tests/: test_friends.py
well-known/matrix/: client  server
